Bug 245655 - Wrong button shown on report configuration dialog
Summary: Wrong button shown on report configuration dialog
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-24 16:56 UTC by David Houlden
Modified: 2010-07-24 17:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2010-07-24 16:56:16 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

Using SVN1154015
On the report configuration dialog at the bottom right I am seeing a "find" button instead of an "OK" button. The tooltip for the button says "Apply Changes" and it functions as an "OK" button.

Reproducible: Always
Comment 1 Alvaro Soliverez 2010-07-24 17:32:42 UTC
SVN commit 1154041 by asoliverez:

Customize the Apply button when calling configure from the reports view

BUG:245655

 M  +2 -0      kreportconfigurationfilterdlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1154041
Comment 2 Thomas Baumgart 2010-07-24 17:50:40 UTC
SVN commit 1154048 by tbaumgart:

Improve button text/icon/tooltip handling

BUG: 245655

 M  +2 -1      kfindtransactiondlg.cpp  
 M  +2 -2      kreportconfigurationfilterdlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1154048