Customize the Apply button when calling configure from the reports view

BUG:245655

svn path=/trunk/extragear/office/kmymoney/; revision=1154041